<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_rules"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="au.edu.holmesglen.kirstine_n.tennisdinner.RulesActivity"
    tools:showIn="@layout/activity_rules"
    android:orientation="vertical"
    android:background="@drawable/tennis">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorTextWhite"
        android:layout_marginBottom="8dp"
        android:text="@string/rule1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorTextWhite"
        android:layout_marginBottom="8dp"
        android:text="@string/rule2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorTextWhite"
        android:layout_marginBottom="8dp"
        android:text="@string/rule3"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorTextWhite"
        android:layout_marginBottom="8dp"
        android:text="@string/rule4"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorTextWhite"
        android:layout_marginBottom="8dp"
        android:text="@string/rule5"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorTextWhite"
        android:layout_marginBottom="8dp"
        android:text="@string/rule6"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorTextWhite"
        android:layout_marginBottom="8dp"
        android:text="@string/rule7"/>

</LinearLayout>
