<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="au.edu.holmesglen.kirstine_n.tennisdinner.HistoryActivity">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_teams"
        android:orderInCategory="10"
        android:title="@string/action_teams"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_main"
        android:orderInCategory="1"
        android:title="@string/action_main"
        app:showAsAction="never" />

</menu>