<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_edit_score"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="au.edu.holmesglen.kirstine_n.tennisdinner.EditScoreActivity"
    tools:showIn="@layout/activity_edit_score"
    android:orientation="vertical"
    android:background="@drawable/tennis">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/edit_scores"
        android:textSize="20dp"
        android:textColor="@color/colorTextWhite"
        android:textStyle="bold"
        android:gravity="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnTester"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="8dp"
            android:background="@drawable/icon_datepicker"
            android:onClick="showDatePickerDialog"/>

        <TextView
            android:id="@+id/tvDisplayDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:textSize="16dp"
            android:textColor="@color/colorTextWhite"
            android:text=""
            android:gravity="center" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvTeamHydroAddNewScore"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/teamHydro"
            android:textColor="@color/colorTextWhite"
            android:textSize="16dp"
            android:textStyle="bold"
            android:gravity="center" />

        <TextView
            android:id="@+id/tvTeamDynamiteAddNewScore"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/teamDynamite"
            android:textColor="@color/colorTextWhite"
            android:textSize="16dp"
            android:textStyle="bold"
            android:gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="" />

        <EditText
            android:id="@+id/etTeamHydro"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_weight="1"
            android:textSize="20dp"
            android:textColor="@color/colorTextWhite"
            android:ems="2" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="" />

        <EditText
            android:id="@+id/etTeamDynamite"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_weight="1"
            android:textSize="20dp"
            android:textColor="@color/colorTextWhite"
            android:ems="2" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="" />
    </LinearLayout>

    <Button
        android:id="@+id/btnEditScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/submit_changes"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorTextWhite"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:layout_gravity="center"/>

</LinearLayout>
